test/binary/bad-typecheck-missing-drop.txt
;;; ERROR: 1
;;; TOOL: run-gen-wasm
magic
version
section(TYPE) { count[1] function params[0] results[0] }
section(FUNCTION) { count[1] type[0] }
section(CODE) {
  count[1]
  func {
    locals[0]
    i32.const 1
    i32.const 2
    i32.add
  }
}
(;; STDERR ;;;
Error running "wasm2wast":
out/test/binary/bad-typecheck-missing-drop/bad-typecheck-missing-drop.wasm:000001c: error: type stack at end of function is 1, expected 0

;;; STDERR ;;)
